# agentic_workflow

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  dev.db  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/agent/: destination_agent.py  interfaces.py  multiagent_runner.py  orchestrator.py  planner.py  react_streamer.py  runner.py  schemas.py  vacation_planner.py
backend/app/agent/core/: base.py  errors.py  events.py  interfaces.py  messages.py  response_text.py  structured_output.py  tool_loop.py  worker.py
backend/app/api/: chat_router.py  conversation_router.py  travel_preferences_router.py  user_router.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/planning/: state.py
backend/app/providers/: openai_responses.py
backend/app/repositories/: conversation_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py  conversation_service.py  user_service.py
backend/app/tools/: base.py  calculator.py  current_weather.py  date_normalizer.py  loader.py  registry.py  weather.py  weather_forcast.py  web_search.py  wiki_place_info.py
backend/app/tools/core/: executor.py  loader.py  registry.py
backend/app/tools/utils/: geo_response.py
backend/migrations/: env.py
backend/migrations/versions/: 71a9848d9274_add_travel_preferences.py  edc4bf60edb8_create_users_conversations_messages.py
frontend/: .gitignore  index.html  package-lock.json  package.json
(+18 files in other folders)
