[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "pydantic[email]>=2.0.0",
  "pydantic-settings>=2.0.0",
  "sqlalchemy>=2.0.48",
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "ddgs>=9.14.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
